--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true, // Updated to true
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -16,6 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "typeRoots": ["./node_modules/@types", "./src/types"],
+  "types": ["node", "react", "react-dom"], 
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
