--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist",
+    "homepage":"https://github.com/VahagnGhaldunts/World-of-Flowers-Hangman-Armenian-"
   },
   "dependencies": {
-    "gh-pages": "^6.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "gh-pages": "^6.1.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.15"
   }
