--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vahagnghaldunts.github.io/World-of-Flowers-Hangman-Armenian-/",
   "name": "hangman",
   "private": true,
   "version": "0.0.0",
@@ -7,8 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "homepage":"https://github.com/VahagnGhaldunts/World-of-Flowers-Hangman-Armenian-"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.0.0",
